--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
   <title>Land Registry System</title>
   <script src="https://cdn.jsdelivr.net/npm/ethers@6.6.2/dist/ethers.umd.min.js"></script>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #000;
-      color: #ffffff;
+      background: linear-gradient(145deg, #0f0f1a, #1a0f2d);
+      color: #eae6ff;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -18,20 +22,22 @@
     }
 
     .container {
-      background: #0a0a23;
-      padding: 2rem;
+      backdrop-filter: blur(10px);
+      background: rgba(30, 15, 50, 0.4);
+      border: 1px solid rgba(200, 100, 255, 0.2);
       border-radius: 20px;
-      max-width: 700px;
+      padding: 2rem;
+      max-width: 720px;
       width: 100%;
-      box-shadow: 0 10px 30px rgba(0, 100, 255, 0.4);
-      border: 1px solid rgba(0, 100, 255, 0.3);
+      box-shadow: 0 0 30px rgba(150, 100, 255, 0.3);
     }
 
     h1 {
       text-align: center;
-      color: #4facfe;
-      font-size: 2.4rem;
-      margin-bottom: 1.5rem;
+      color: #c77dff;
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
+      letter-spacing: 1px;
     }
 
     h3 {
@@ -39,13 +45,13 @@
       font-size: 1.2rem;
       margin-top: 1.5rem;
       margin-bottom: 0.5rem;
-      border-left: 4px solid #4facfe;
+      border-left: 4px solid #c77dff;
       padding-left: 10px;
     }
 
     input {
-      background: #111;
-      border: 2px solid #4facfe;
+      background: rgba(40, 20, 60, 0.6);
+      border: 1px solid #c77dff;
       border-radius: 10px;
       padding: 12px;
       font-size: 1rem;
@@ -56,12 +62,12 @@
 
     input:focus {
       outline: none;
-      border-color: #00d4ff;
-      box-shadow: 0 0 8px rgba(0, 212, 255, 0.3);
+      border-color: #ff8af4;
+      box-shadow: 0 0 8px rgba(255, 138, 244, 0.4);
     }
 
     button {
-      background: linear-gradient(to right, #0052D4, #4364F7);
+      background: linear-gradient(to right, #7209b7, #b5179e);
       border: none;
       color: white;
       padding: 12px;
@@ -75,13 +81,13 @@
     }
 
     button:hover {
-      background: linear-gradient(to right, #003c9e, #2840b0);
-      box-shadow: 0 0 12px rgba(0, 100, 255, 0.4);
+      background: linear-gradient(to right, #560bad, #a4139c);
+      box-shadow: 0 0 15px rgba(200, 100, 255, 0.4);
     }
 
     .output {
-      background: #111;
-      border-left: 4px solid #4facfe;
+      background: rgba(20, 10, 40, 0.6);
+      border-left: 4px solid #c77dff;
       padding: 1rem;
       margin-top: 1.5rem;
       border-radius: 10px;
@@ -94,7 +100,7 @@
       text-align: center;
       font-weight: bold;
       margin-bottom: 10px;
-      color: #00ffae;
+      color: #f0aaff;
     }
 
     .section {
@@ -103,15 +109,15 @@
 
     #totalCost {
       margin-top: 5px;
-      color: #00ffae;
+      color: #ffb3ff;
       font-weight: bold;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>🌐 Land Registry System</h1>
-    <div id="walletStatus">🔌 Connecting to MetaMask...</div>
+    <h1>🔮 Land Registry System</h1>
+    <div id="walletStatus">🕐 Connecting to MetaMask...</div>
 
     <div class="section">
       <h3>Register New Land</h3>
@@ -210,7 +216,7 @@
           provider = new ethers.BrowserProvider(window.ethereum);
           signer = await provider.getSigner();
           contract = new ethers.Contract(contractAddress, abi, signer);
-          document.getElementById("walletStatus").innerText = "🟢 Connected to MetaMask";
+          document.getElementById("walletStatus").innerText = "🟣 Connected to MetaMask";
         } catch (err) {
           document.getElementById("walletStatus").innerText = "🔴 Connection failed.";
         }
